<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="details">Details</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_map" translatable="false">Location</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="action_play_sound">Play Sound</string>
    <string name="action_move_around">Move Around</string>
    <string name="title_activity_play_sound">Sound</string>
    <string name="title_activity_move_around">Move Around</string>
    
    <!-- Settings preference -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <!-- geo:latitude,longitude -->
    <string name="pref_location_coord" translatable="false">coordinates</string>
    <string name="pref_location_coordinates" translatable="false">37.4103,-122.075</string>
    <string name="pref_location_coord_latitude" translatable="false">37.4103</string>
    <string name="pref_location_coord_longitude" translatable="false">-122.075</string>
    
    <string name="pref_temperature_unit_key" translatable="false">temperature</string>
    <string name="pref_temperature_title">Temperature</string>
    <string name="pref_temperature_default_metric">metric</string>
    <string name="pref_temperature_imperial">imperial</string>
    
    <string-array name="pref_temperature_units_labels">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    
    <string-array name="pref_temperature_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    
    <string name="hyphen" translatable="false">-</string>
    <string name="slash" translatable="false">/</string>
    
    <!-- hard coded strings -->
    <string name="hardcode_day" translatable="false">Tomorrow</string>
    <string name="hardcode_date" translatable="false">July 4</string>
    <string name="hardcode_content_description" translatable="false">Rain</string>
    <string name="hardcode_forecast" translatable="false">rain</string>
    <string name="hardcode_forecast_high" translatable="false">20\u00B0</string>
    <string name="hardcode_forecast_low" translatable="false">10\u00B0</string>
    <string name="hardcode_forecast_humidity" translatable="false">Humidity\:90\%</string>
    <string name="hardcode_forecast_pressure" translatable="false">Pressure\:8.0\ hPa</string>
    <string name="hardcode_forecast_wind_speed" translatable="false">Wind\:80\ mph</string>
    <string name="hardcode_button_description">Play</string>
    
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today" translatable="false">Today</string>
    
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow" translatable="false">Tomorrow</string>
    
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    
    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    
    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    
    <!-- Humidity format CHAR LIMIT=25] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    
    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>