<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.sunshine.app.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_map" 
        android:title="@string/action_map"
        android:orderInCategory="2" 
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_play_sound" 
        android:title="@string/action_play_sound" 
        android:orderInCategory="3"
        app:showAsAction="never"/>
    
    <item android:id="@+id/action_move_around" 
        android:title="@string/action_move_around" 
        android:orderInCategory="4"
        app:showAsAction="never"/>

</menu>
